# rustream

./: Cargo.toml  README.md
src/: lib.rs  m3u.rs  main.rs  mpv.rs  params.rs  types.rs  ui.rs
src/views/: channel_view.rs  group_view.rs  iced_utils.rs  mod.rs  settings_view.rs
