[package]
name = "rustream"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["image"] }
reqwest = { version = "0.12.9", features = ["blocking"] }
m3u = { git = "https://github.com/LindonAliu/m3u", branch = "master", features = [
    "iptv",
] }
url = "2.5.3"
rfd = "0.15"
